#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([minmax], [0.0.1], [vitalie@ciubotaru.tokyo], [https://github.com/ciubotaru/minmax/archive/master.zip], [https://github.com/ciubotaru/minmax/])
AC_CONFIG_SRCDIR([minmax.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([limits.h stddef.h stdint.h stdarg.h])

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT([Makefile] [tests/Makefile])
